--- a/Site/index.html
+++ b/Site/index.html
@@ -11,14 +11,23 @@
 
 
 <body background="backscratch.jpg" >
-    <img class="navbar" src="background1.jpg" height="250" width="1750" alt="background">
-    <a href="index.html" >Main</a>
+    <img src="background1.jpg" height="250" width="1750" alt="background">
 
-    <nav class="navbar navbar-expand navbar-light bg-danger" >
-    <a href="Inicio de noticias.html" >Inicio</a>
-    <a href="Inicio de noticias.html" >Log in</a>
-    <a href="Inicio de noticias.html" >Register</a>
-    <a href="Inicio de noticias.html" >My Dashboard</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html" >Main</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Inicio de noticias.html" >Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Inicio de noticias.html" >Log in</a>
+            </li>
+                <a href="Inicio de noticias.html" >Register</a>
+                <a href="Inicio de noticias.html" >My Dashboard</a>
+        </ul>
+        
     </nav>
     <h1 id="top">TG-NEWS</h1>
     <img src="pig.jpg" alt="EL PINCHE CERDO">
