--- a/Site/My Dashboard.html
+++ b/Site/My Dashboard.html
@@ -3,16 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <title>Document</title>
 </head>
 <body>
     <img src="background1.jpg" height="250" width="1750" alt="background">
-    <a href="index.html" >Main</a>
 
-    <a href="Inicio de noticias.html" >Inicio</a>
-    <a href="Inicio de noticias.html" >Log in</a>
-    <a href="Inicio de noticias.html" >Register</a>
-    <a href="Inicio de noticias.html" >My Dashboard</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link"back href="index.html" >Main</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Inicio de noticias.html" >Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Inicio de noticias.html" >Log in</a>
+            </li>
+            <li>
+                <a class="nav-link" href="Inicio de noticias.html" >Register</a>
+            </li>
+            <li>
+                <a class="nav-link" href="Inicio de noticias.html" >My Dashboard</a>
+            </li>
+        </ul>        
+    </nav>
     <h1 id="top">TG-NEWS</h1>
     <p>    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae maxime aspernatur voluptates eveniet. Aliquam vitae tempore quam nemo, optio illum odit? Distinctio possimus earum atque laudantium ab tempore perferendis excepturi quia impedit, asperiores rem ratione, deserunt odit? Nulla exercitationem dolorum esse ipsum? Cupiditate minima laudantium consequuntur enim hic culpa eveniet.</p>
 
