Sigo sin saber como se usa git, register done (casi)

--- a/Site/index.html
+++ b/Site/index.html
@@ -16,9 +16,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Bienvenido a TG-GAMER</title>
-
+    <link rel="icon" href="clipart.png" >
 </head>
 <body background="seamless.jpg" style="background-repeat: repeat-y; background-size: cover; background-position: right;">
+
+    
 
     <img class="img-fluid" style=" height: 100%; width: 100%;" src="background1.jpg" alt="background">
 
